# browser-bert

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_bert.py
frontend/: .gitignore  package.json  postcss.config.js  tailwind.config.js  tsconfig.json
frontend/pages/: index.tsx
frontend/src/: constants.ts
frontend/src/bert/: model.ts  tokenizer.ts
frontend/src/data/: load.ts  process.ts
ml/: setup_bert.py
