[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["Alexander Fischer <alexfi@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.4.1"
transformers = "4.8.2"
sklearn = "^0.0"
pandas = "1.3.0"
torch = "^1.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
setup_bert = "ml.setup_bert:run"
